--- a/templates/index.html
+++ b/templates/index.html
@@ -10,16 +10,20 @@
     <script>
     document.documentElement.style.setProperty('--num-of-teams', '{{ data|length }}');
     </script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-    text-align: left;
-    background-color: #181c28;
-    color: white;
-    font-family: 'Oswald', sans-serif;
-    margin: 0; /* Remove default margin */
-}
-
+            text-align: left;
+            background-color: #181c28;
+            color: white;
+            font-family: 'Oswald', sans-serif;
+            margin: 0; /* Remove default margin */
+        }
+        @media (max-width: 600px) {
+            body {
+                font-size: 14px; /* Adjust the font size for smaller screens */
+            }
+        }
         :root {
             --team-width: 150px; /* Set the default team box width */
         }
